Dark Mode fixed, all elements in place

--- a/style.css
+++ b/style.css
@@ -29,25 +29,26 @@ margin: 0;
 
 #search-container {
 border: 1px solid #b3b3b3;
-margin: 15px auto;
+margin: 20px auto;
 width: 554px;
 border-radius: 3px;
 box-shadow: 1px 1px 1px #b3b3b3;
 }
 
 #search-bar {
-    width: 448px;
-    height: 34px;
+    width: 505px;
+    height: 35px;
     border: none;
     font-size: 1em;
 }
 
-#search-conatiner:hover {
+
+#search-container:hover {
     box-shadow: 2px 4px 4px #b3b3b3;
 
 }
 #voice-control {
-    height: 20px;
+    height: 30px;
     width: 20px;
     vertical-align: middle;
 }
@@ -69,7 +70,7 @@ box-shadow: 1px 1px 1px #b3b3b3;
 }
 
 #sub-btn input:hover {
-    border: 1px solid #757575
+    border: 1px solid #747474
 }
 
 /*Header & Footer */
